fix footer white space

--- a/react-app/src/components/Page/Story.css
+++ b/react-app/src/components/Page/Story.css
@@ -4,7 +4,8 @@
 
 .story-container {
 	height: 100%;
-	margin: 0 !important;
+	margin: 0;
+	padding-bottom: 25vh;
 }
 
 .story-div {
@@ -49,15 +50,12 @@
 	width: 100%;
 }
 
-.story-body > p {
+.story-body {
 	/* background-color: green; */
 	width: 100%;
 	margin: 0;
 	font-family: "Open Sans", sans-serif;
-}
-
-div > .story-body {
-	font-size: 50px !important;
+	font-size: 14px !important;
 }
 
 .like-wrapper {
@@ -122,6 +120,7 @@ div > .story-body {
 	border-bottom: 1px solid #efefef;
 	width: 100%;
 }
+
 .comment-icon:hover {
 	cursor: pointer;
 	color: #e0e0e0;
